--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Index</title>
   </head>
   <body>
-    body
+    <div class="container">
+      aici vine tabla de sah
+    </div>
   </body>
 </html>
