--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         width: 100px;
         float: left;
       }
+
+      div.row {
+        max-width: 800px;
+      }
     </style>
     <div class="container">
       <div class="row">
