First solution (only for large screens).

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body>
     <style>
       div.col {
-        background: red;
         height: 100px;
         width: 100px;
         float: left;
@@ -17,87 +16,95 @@
       div.row {
         max-width: 800px;
       }
+
+      div.col.light {
+        background: #CCC;
+      }
+
+      div.col.dark {
+        background: #111;
+      }
     </style>
     <div class="container">
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
       </div>
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
       </div>
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
       </div>
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
       </div>
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
       </div>
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
       </div>
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
       </div>
       <div class="row">
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
+        <div class="col dark"></div>
+        <div class="col light"></div>
       </div>
     </div>
   </body>
